[gd_scene load_steps=3 format=3 uid="uid://dw06vtenbmxbj"]

[ext_resource type="Script" path="res://item.gd" id="1_qefm5"]
[ext_resource type="Texture2D" uid="uid://cmtxlk7i84m0w" path="res://Sprites/Grey.png" id="3_qqcs6"]

[node name="Item" type="ColorRect" groups=["testFree"]]
texture_filter = 1
custom_minimum_size = Vector2(250, 400)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1030.0
offset_bottom = -320.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.447059, 0.466667, 0.556863, 1)
script = ExtResource("1_qefm5")

[node name="Panel" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -196.0
offset_right = 64.0
offset_bottom = 196.0
grow_horizontal = 2
grow_vertical = 2

[node name="lb_Name" type="Label" parent="Panel"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Name"
horizontal_alignment = 1

[node name="item_Icon" type="TextureRect" parent="Panel"]
layout_mode = 2
expand_mode = 4

[node name="lb_Desc" type="Label" parent="Panel"]
custom_minimum_size = Vector2(160, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = "Desc"
horizontal_alignment = 1
autowrap_mode = 2

[node name="lb_TraitsOne" type="Label" parent="Panel"]
custom_minimum_size = Vector2(160, 20)
layout_mode = 2
mouse_filter = 0
horizontal_alignment = 1
autowrap_mode = 2

[node name="lb_TraitsTwo" type="Label" parent="Panel"]
custom_minimum_size = Vector2(160, 20)
layout_mode = 2
mouse_filter = 0
horizontal_alignment = 1
autowrap_mode = 2

[node name="lb_TraitsThree" type="Label" parent="Panel"]
custom_minimum_size = Vector2(160, 20)
layout_mode = 2
mouse_filter = 0
horizontal_alignment = 1
autowrap_mode = 2

[node name="purchaseButton" type="Button" parent="Panel"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2

[node name="lb_Cost" type="Label" parent="Panel/purchaseButton"]
modulate = Color(0.878431, 0.678431, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -21.0
offset_right = 80.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "$"
horizontal_alignment = 1

[node name="traitBox" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 50.0
offset_right = 100.0
offset_bottom = 200.0
grow_horizontal = 2
color = Color(0.592157, 0.823529, 0.843137, 1)

[node name="traitHover" type="Label" parent="traitBox"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -75.0
offset_right = 100.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
autowrap_mode = 2

[node name="greyOut" type="PointLight2D" parent="."]
visible = false
position = Vector2(125, 200)
scale = Vector2(0.976563, 1.5625)
enabled = false
color = Color(0.74902, 0.74902, 0.74902, 1)
blend_mode = 1
texture = ExtResource("3_qqcs6")

[connection signal="mouse_entered" from="Panel/lb_TraitsOne" to="." method="_on_lb_traits_one_mouse_entered"]
[connection signal="mouse_exited" from="Panel/lb_TraitsOne" to="." method="_on_lb_traits_one_mouse_exited"]
[connection signal="mouse_entered" from="Panel/lb_TraitsTwo" to="." method="_on_lb_traits_two_mouse_entered"]
[connection signal="mouse_exited" from="Panel/lb_TraitsTwo" to="." method="_on_lb_traits_two_mouse_exited"]
[connection signal="mouse_entered" from="Panel/lb_TraitsThree" to="." method="_on_lb_traits_three_mouse_entered"]
[connection signal="mouse_exited" from="Panel/lb_TraitsThree" to="." method="_on_lb_traits_three_mouse_exited"]
[connection signal="button_down" from="Panel/purchaseButton" to="." method="_on_purchase_button_button_down"]
